@@ -77,6 +77,7 @@ if ($options->{file}) {
     push @devices, {
         ID           => $id++,
         FILE         => $_,
+        IP           => shift @{$options->{host}},
         AUTHSNMP_ID  => 1,
         MODELSNMP_ID => 1
     } foreach @{$options->{file}};
