@@ -29,13 +29,14 @@ inventory:
 * Support ASM filesystems on Oracle Grid
 
 netdiscovery/netinventory:
-* Bump NetDiscovery & NetInventory task version to 2.4
+* Bump NetDiscovery & NetInventory task version to 2.5
 * Added section support for MODEMS, SIMCARDS & FIRMWARES
 * Added new detection algorithm based on exposed device supported MIB (sysORID list)
   and/or sysObjectID
 * Added support for HP iLO cards
 * Added support for Digi devices with enhanced MODEMS, SIMCARDS & FIRMWARES support
 * Updated sysobject.ids with a lot of new devices support
+* Keep first MAC address found while discovering
 
 deploy:
 * Bump Deploy task version to 2.5
